ci: update nuke target

--- a/.github/workflows/continous.yml
+++ b/.github/workflows/continous.yml
@@ -17,4 +17,4 @@ jobs:
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('global.json', 'source/**/*.csproj') }}
       - name: Run some command
-        run: ./build.sh Build
+        run: ./build.sh Compile
