--- a/.github/workflows/continous.yml
+++ b/.github/workflows/continous.yml
@@ -16,5 +16,5 @@ jobs:
             .nuke/temp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('global.json', 'source/**/*.csproj') }}
-      - name: Display version 2
+      - name: Milestone
         run: ./build.sh Milestone
