--- a/.github/workflows/continous.yml
+++ b/.github/workflows/continous.yml
@@ -17,4 +17,4 @@ jobs:
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('global.json', 'source/**/*.csproj') }}
       - name: Milestone
-        run: ./build.sh Milestone
+        run: ./build.sh Changelog
