--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,3 +18,5 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('global.json', 'source/**/*.csproj') }}
       - name: Release
         run: ./build.sh Release
+        env:
+          GITHUB_CONTEXT: ${{ secrets.GITHUB_TOKEN }}
