--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,21 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "nuke",
+			"type": "coreclr",
+			"request": "launch",
+			"preLaunchTask": "build",
+			"program": "${workspaceFolder}/build/bin/Debug/_build.dll",
+			"args": [
+				"Release",
+				"-GitHubToken",
+				"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"
+			],
+			"cwd": "${workspaceFolder}/build",
+			"console": "internalConsole",
+			"stopAtEntry": false
+		},
+		{
 			// Use IntelliSense to find out which attributes exist for C# debugging
 			// Use hover for the description of the existing attributes
 			// For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
