--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ nuke-global.*
 *.user
 *.userosscache
 *.sln.docstates
-
+.vscode/
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
