--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -2,21 +2,47 @@ name: pester
 on: pull_request
 
 jobs:
-  playground:
-    name: playgrounnd
+  invoke-pester-1:
+    name: Install from console
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Cache .nuke/temp, ~/.nuget/packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            .nuke/temp
-            ~/.nuget/packages
-          key: ${{ runner.os }}-${{ hashFiles('global.json', 'source/**/*.csproj') }}
       - name: Install Pester
         run: Install-Module -Name Pester -Force
       - name: Invoke-Pester
         run: Invoke-Pester .\tests\
+  invoke-pester-2:
+    name: Install from console
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install Pester
+        run: Install-Module -Name Pester -Force
+      - name: Invoke-Pester
+        run: Invoke-Pester .\tests\ -CI
+  invoke-pester-configuration:
+    name: Run Pester from file
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install Pester
+        run: Install-Module -Name Pester -Force
+      - name: Invoke-Pester
+        run: Invoke-Pester .\tests\ -CI
+  runner:
+    name: Run Pester from file
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install Pester
+        run: Install-Module -Name Pester -Force
+      - name: Invoke-Pester
+        run: .\tests\tests.runner.ps1
