--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install Pester
-        run: Install-Module -Name Pester -Force
+      # - name: Install Pester
+      #   run: Install-Module -Name Pester -Force
       - name: Invoke-Pester
         run: ./build.sh ExecuteTestsFixLogging
   nuke-without-logging:
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install Pester
-        run: Install-Module -Name Pester -Force
+      # - name: Install Pester
+      #   run: Install-Module -Name Pester -Force
       - name: Invoke-Pester
         run: ./build.sh ExecuteTests
